--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ doctest = false
 test_lib = []
 
 [dependencies]
+once_cell = "1.18.0"
 pico-args = "0.5.0"
+regex = "1.10.2"
+strum = { version = "0.25.0", features = ["derive"] }
